added binary search in f_x>1

--- a/meepc.ipynb
+++ b/meepc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([742.2005135 , 971.90207657, 825.8388863 , 727.95600898])"
+       "array([973.9179621 , 943.87804881, 779.86768031, 698.43487408])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isclose(a, b, rel_tol=1e-02, abs_tol=0.0):\n",
+    "    return abs(a-b) <= max(rel_tol * max(abs(a), abs(b)), abs_tol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isclose(1,1.02)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_s(h,alpha_old,Z,u,i):\n",
+    "  ans=0\n",
+    "  for j in range(4):\n",
+    "            s_i_j = h[j] - alpha_old[i]*Z[i][j]\n",
+    "            ans += (1/(u + s_i_j/Z[i][j]))\n",
+    "  return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,22 +137,38 @@
     "    converged = False\n",
     "    alpha_old = np.zeros(100)\n",
     "    old = 0\n",
+    "    start=0\n",
+    "\n",
+    "    \n",
     "    while i < 100:\n",
     "        if converged:\n",
     "            return h\n",
     "        alpha_old[i] = alpha[i]\n",
     "        f_x = 0\n",
     "        u = random()\n",
-    "        for j in range(4):\n",
-    "            s_i_j = h[j] - alpha_old[i]*Z[i][j]\n",
-    "            f_x += (1/(u + s_i_j/Z[i][j]))\n",
+    "        f_x=calc_s(h,alpha_old,Z,u,i)\n",
+    "        \n",
     "        if f_x == 1:\n",
     "            alpha[i] = u\n",
-    "        else:\n",
+    "        \n",
+    "        if f_x < 1:\n",
+    "\n",
     "            alpha[i] = 0\n",
+    "\n",
+    "        if f_x > 1:\n",
+    "            u+=0.00001*u\n",
+    "            while(not isclose(f_x,1)):\n",
+    "                f_x = calc_s(h,alpha_old,Z,u,i)\n",
+    "                if(f_x>1):\n",
+    "                    u+=0.0001*u\n",
+    "                else:\n",
+    "                    u-=0.0001*u \n",
+    "            alpha[i]=u    \n",
+    "            \n",
+    "                \n",
     "        h = h + (alpha[i] - alpha_old[i])*Z[i]\n",
     "        i += 1\n",
-    "        if i>99 :\n",
+    "        if i>=99 :\n",
     "            i = 0\n",
     "            updates += 1\n",
     "            if old == 0:\n",
@@ -118,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-3.29514194e-13, -2.23820962e-13, -2.54019028e-13,  1.88363214e-13])"
+       "array([ 7806.71740908,  5249.13344947, 10106.82920625,  7713.43229188])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-3.03477064e+12, -4.46785677e+12, -3.93671296e+12,  5.30889222e+12])"
+       "array([1.28094812e-04, 1.90507635e-04, 9.89429998e-05, 1.29643972e-04])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
