chosen 1e-05 as optimum tolerance

--- a/meepc.ipynb
+++ b/meepc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([973.9179621 , 943.87804881, 779.86768031, 698.43487408])"
+       "array([854.4840649 , 900.76170879, 786.0850101 , 701.34916922])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,11 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isclose(a, b, rel_tol=1e-02, abs_tol=0.0):\n",
+    "def isclose(a, b, rel_tol, abs_tol=0.0):\n",
     "    return abs(a-b) <= max(rel_tol * max(abs(a), abs(b)), abs_tol)"
    ]
   },
@@ -93,27 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isclose(1,1.02)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(Z,alpha,h):\n",
+    "def solution(Z,alpha,h,tol):\n",
     "    i = 0\n",
     "    updates = 0\n",
     "    converged = False\n",
@@ -157,7 +137,7 @@
     "\n",
     "        if f_x > 1:\n",
     "            u+=0.00001*u\n",
-    "            while(not isclose(f_x,1)):\n",
+    "            while(not isclose(f_x,1,tol)):\n",
     "                f_x = calc_s(h,alpha_old,Z,u,i)\n",
     "                if(f_x>1):\n",
     "                    u+=0.0001*u\n",
@@ -175,7 +155,7 @@
     "                stored_alpha_old = deepcopy(alpha_old)\n",
     "                old = 1\n",
     "        if updates == 4:\n",
-    "            if np.all(alpha - stored_alpha_old) < .00001:\n",
+    "            if np.all(alpha - stored_alpha_old) < tol :  #.00001\n",
     "                converged = True\n",
     "            else:\n",
     "                updates = 0\n",
@@ -185,37 +165,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 7806.71740908,  5249.13344947, 10106.82920625,  7713.43229188])"
+       "array([5578.67546033, 8129.30575987, 9758.21555533, 9263.21414035])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "h = solution(Z,alpha,h)\n",
+    "h = solution(Z,alpha,h,1e-05)\n",
     "h"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## weight vectors obtained are:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.28094812e-04, 1.90507635e-04, 9.89429998e-05, 1.29643972e-04])"
+       "array([0.00017925, 0.00012301, 0.00010248, 0.00010795])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,55 +210,6 @@
    "source": [
     "v = 1/h\n",
     "v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def coordinatedescent(S,Z,i,var_x):\n",
-    "  sum=0\n",
-    "  for j in range(4):\n",
-    "    sum+=1/var_x[i,j]+(S[i,j]/Z[i,j])\n",
-    "  if(sum==1):\n",
-    "    return var_x[i] \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getS(h,alpha,Z,n,d,i):\n",
-    "  S = np.reshape([random()*100 for io in range(400)],(100,4))\n",
-    "  for j in range(4):\n",
-    "    S[i,j]= h[j]-alpha[j]*Z[i,j]\n",
-    "  return S\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def meepcalgo(n):\n",
-    "  index= np.random.randint(n)\n",
-    "  converged = False\n",
-    "  # alpha_i=X[index,:]\n",
-    "  while(index<100):\n",
-    "    if converged:\n",
-    "      break\n",
-    "    alpha_old = alpha[index]\n",
-    "    S = getS(h,alpha_old,Z,n,4,index)\n",
-    "    var_x=np.reshape([random() for i in range(100)],(100,4))\n",
-    "    f_val=coordinatedescent(S,Z,index)\n",
-    "    index+=1\n",
-    "    if(index==100):\n",
-    "      index=0"
    ]
   },
   {
