Convergence bug removed

--- a/meepc.ipynb
+++ b/meepc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([882.44852035, 831.21344943, 914.06760336, 879.06371078])"
+       "array([762.06456943, 762.48833024, 827.30172556, 943.58890861])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,28 +120,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def binary(h,alpha_old,Z,u,i,low,high):\n",
-    "  mid=(low+high)>>1\n",
+    "def binary(h,alpha_old,Z,i,low,high):\n",
+    "  mid=(low+high)/2\n",
     "  temp_ans=calc_s(h,alpha_old,Z,mid,i)\n",
-    "  while(abs(temp_ans-1)>0.01):\n",
-    "    print(abs(temp_ans-1))\n",
+    "  while(not isclose(temp_ans,1,1e-05)):\n",
+    "    # print(abs(temp_ans-1))\n",
     "    if(temp_ans>1):\n",
     "      low=mid\n",
     "    elif(temp_ans<1):\n",
     "      high=mid\n",
     "    else:\n",
     "      return mid\n",
+    "    mid = (low+high)/2\n",
+    "    # print(low,high,mid)\n",
     "    temp_ans=calc_s(h,alpha_old,Z,mid,i)\n",
     "  return mid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,13 +154,16 @@
     "    while(calc_s(h,alpha_old,Z,u,i)>1):\n",
     "        u_old=u\n",
     "        u*=2        \n",
-    "    u =binary(h,alpha_old,Z,u,i,u_old,u)\n",
+    "    if u_old == u:\n",
+    "        u = binary(h,alpha_old,Z,i,0,1)\n",
+    "    else:\n",
+    "        u =binary(h,alpha_old,Z,i,u_old,u)\n",
     "    return u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,10 +173,7 @@
     "    converged = False\n",
     "    alpha_old = np.zeros(100)\n",
     "    old = 0\n",
-    "    start=0\n",
-    "    lessthan_u=0\n",
-    "    greathan_u=0\n",
-    "    \n",
+    "        \n",
     "    while i < 100:\n",
     "        if converged:\n",
     "            return h\n",
@@ -210,27 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/gajendersharma/meepc/meepc.ipynb Cell 13'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000012?line=0'>1</a>\u001b[0m h \u001b[39m=\u001b[39m solution(Z,alpha,h,\u001b[39m1e-02\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000012?line=1'>2</a>\u001b[0m h\n",
-      "\u001b[1;32m/Users/gajendersharma/meepc/meepc.ipynb Cell 12'\u001b[0m in \u001b[0;36msolution\u001b[0;34m(Z, alpha, h, tol)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000011?line=23'>24</a>\u001b[0m     alpha[i] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000011?line=25'>26</a>\u001b[0m \u001b[39mif\u001b[39;00m f_x \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000011?line=26'>27</a>\u001b[0m     alpha[i]\u001b[39m=\u001b[39m helper(h,alpha_old,Z,\u001b[39m1\u001b[39;49m,i)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000011?line=29'>30</a>\u001b[0m h \u001b[39m=\u001b[39m h \u001b[39m+\u001b[39m (alpha[i] \u001b[39m-\u001b[39m alpha_old[i])\u001b[39m*\u001b[39mZ[i]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000011?line=30'>31</a>\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[1;32m/Users/gajendersharma/meepc/meepc.ipynb Cell 11'\u001b[0m in \u001b[0;36mhelper\u001b[0;34m(h, alpha_old, Z, u, i)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000010?line=5'>6</a>\u001b[0m     u_old\u001b[39m=\u001b[39mu\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000010?line=6'>7</a>\u001b[0m     u\u001b[39m*\u001b[39m\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m        \n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000010?line=7'>8</a>\u001b[0m u \u001b[39m=\u001b[39mbinary(h,alpha_old,Z,u,i,u_old,u)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000010?line=8'>9</a>\u001b[0m \u001b[39mreturn\u001b[39;00m u\n",
-      "\u001b[1;32m/Users/gajendersharma/meepc/meepc.ipynb Cell 10'\u001b[0m in \u001b[0;36mbinary\u001b[0;34m(h, alpha_old, Z, u, i, low, high)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000009?line=8'>9</a>\u001b[0m   \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000009?line=9'>10</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m mid\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000009?line=10'>11</a>\u001b[0m   temp_ans\u001b[39m=\u001b[39mcalc_s(h,alpha_old,Z,mid,i)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000009?line=11'>12</a>\u001b[0m \u001b[39mreturn\u001b[39;00m mid\n",
-      "\u001b[1;32m/Users/gajendersharma/meepc/meepc.ipynb Cell 9'\u001b[0m in \u001b[0;36mcalc_s\u001b[0;34m(h, alpha_old, Z, u, i)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000008?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m4\u001b[39m):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000008?line=3'>4</a>\u001b[0m           s_i_j \u001b[39m=\u001b[39m h[j] \u001b[39m-\u001b[39m alpha_old[i]\u001b[39m*\u001b[39mZ[i][j]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000008?line=4'>5</a>\u001b[0m           ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m(u \u001b[39m+\u001b[39m s_i_j\u001b[39m/\u001b[39;49mZ[i][j]))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/meepc.ipynb#ch0000008?line=5'>6</a>\u001b[0m \u001b[39mreturn\u001b[39;00m ans\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "array([9144.37935994, 5063.04084804, 8433.10957782, 7448.28805468])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "h = solution(Z,alpha,h,1e-02)\n",
+    "h = solution(Z,alpha,h,1e-05)\n",
     "h"
    ]
   },
@@ -243,9 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00010936, 0.00019751, 0.00011858, 0.00013426])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v = 1/h\n",
     "v"
@@ -257,196 +265,14 @@
    "source": [
     "## visualising the ellipsoid with data points\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class EllipsoidTool:\n",
-    "    \"\"\"Some stuff for playing with ellipsoids\"\"\"\n",
-    "    def __init__(self): pass\n",
-    "    \n",
-    "    def getMinVolEllipse(self, P=None, tolerance=0.01):\n",
-    "        \"\"\" Find the minimum volume ellipsoid which holds all the points\n",
-    "        \n",
-    "        Based on work by Nima Moshtagh\n",
-    "        http://www.mathworks.com/matlabcentral/fileexchange/9542\n",
-    "        and also by looking at:\n",
-    "        http://cctbx.sourceforge.net/current/python/scitbx.math.minimum_covering_ellipsoid.html\n",
-    "        Which is based on the first reference anyway!\n",
-    "        \n",
-    "        Here, P is a numpy array of N dimensional points like this:\n",
-    "        P = [[x,y,z,...], <-- one point per line\n",
-    "             [x,y,z,...],\n",
-    "             [x,y,z,...]]\n",
-    "        \n",
-    "        Returns:\n",
-    "        (center, radii, rotation)\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        (N, d) = np.shape(P)\n",
-    "        d = float(d)\n",
-    "    \n",
-    "        # Q will be our working array\n",
-    "        Q = np.vstack([np.copy(P.T), np.ones(N)]) \n",
-    "        QT = Q.T\n",
-    "        \n",
-    "        # initializations\n",
-    "        err = 1.0 + tolerance\n",
-    "        u = (1.0 / N) * np.ones(N)\n",
-    "\n",
-    "        # Khachiyan Algorithm\n",
-    "        while err > tolerance:\n",
-    "            V = np.dot(Q, np.dot(np.diag(u), QT))\n",
-    "            M = np.diag(np.dot(QT , np.dot(linalg.inv(V), Q)))    # M the diagonal vector of an NxN matrix\n",
-    "            j = np.argmax(M)\n",
-    "            maximum = M[j]\n",
-    "            step_size = (maximum - d - 1.0) / ((d + 1.0) * (maximum - 1.0))\n",
-    "            new_u = (1.0 - step_size) * u\n",
-    "            new_u[j] += step_size\n",
-    "            err = np.linalg.norm(new_u - u)\n",
-    "            u = new_u\n",
-    "\n",
-    "        # center of the ellipse \n",
-    "        center = np.dot(P.T, u)\n",
-    "    \n",
-    "        # the A matrix for the ellipse\n",
-    "        A = linalg.inv(\n",
-    "                       np.dot(P.T, np.dot(np.diag(u), P)) - \n",
-    "                       np.array([[a * b for b in center] for a in center])\n",
-    "                       ) / d\n",
-    "                       \n",
-    "        # Get the values we'd like to return\n",
-    "        U, s, rotation = linalg.svd(A)\n",
-    "        radii = 1.0/np.sqrt(s)\n",
-    "        \n",
-    "        return (center, radii, rotation)\n",
-    "        \n",
-    "    def getEllipsoidVolume(self, radii):\n",
-    "    \"\"\"Calculate the volume of the blob\"\"\"\n",
-    "        return 4./3.*np.pi*radii[0]*radii[1]*radii[2]\n",
-    "\n",
-    "    def plotEllipsoid(self, center, radii, rotation, ax=None, plotAxes=False, cageColor='b', cageAlpha=0.2):\n",
-    "        \"\"\"Plot an ellipsoid\"\"\"\n",
-    "        make_ax = ax == None\n",
-    "        if make_ax:\n",
-    "            fig = plt.figure()\n",
-    "            ax = fig.add_subplot(111, projection='3d')\n",
-    "            \n",
-    "        u = np.linspace(0.0, 2.0 * np.pi, 100)\n",
-    "        v = np.linspace(0.0, np.pi, 100)\n",
-    "        \n",
-    "        # cartesian coordinates that correspond to the spherical angles:\n",
-    "        x = radii[0] * np.outer(np.cos(u), np.sin(v))\n",
-    "        y = radii[1] * np.outer(np.sin(u), np.sin(v))\n",
-    "        z = radii[2] * np.outer(np.ones_like(u), np.cos(v))\n",
-    "        # rotate accordingly\n",
-    "        for i in range(len(x)):\n",
-    "            for j in range(len(x)):\n",
-    "                [x[i,j],y[i,j],z[i,j]] = np.dot([x[i,j],y[i,j],z[i,j]], rotation) + center\n",
-    "\n",
-    "        if plotAxes:\n",
-    "            # make some purdy axes\n",
-    "            axes = np.array([[radii[0],0.0,0.0],\n",
-    "                            [0.0,radii[1],0.0],\n",
-    "                            [0.0,0.0,radii[2]]])\n",
-    "            # rotate accordingly\n",
-    "            for i in range(len(axes)):\n",
-    "                axes[i] = np.dot(axes[i], rotation)\n",
-    "\n",
-    "\n",
-    "            # plot axes\n",
-    "            for p in axes:\n",
-    "                X3 = np.linspace(-p[0], p[0], 100) + center[0]\n",
-    "                Y3 = np.linspace(-p[1], p[1], 100) + center[1]\n",
-    "                Z3 = np.linspace(-p[2], p[2], 100) + center[2]\n",
-    "                ax.plot(X3, Y3, Z3, color=cageColor)\n",
-    "\n",
-    "        # plot ellipsoid\n",
-    "        ax.plot_wireframe(x, y, z,  rstride=4, cstride=4, color=cageColor, alpha=cageAlpha)\n",
-    "        \n",
-    "        if make_ax:\n",
-    "            plt.show()\n",
-    "            plt.close(fig)\n",
-    "            del fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(center)\n",
-    "print(\"---\")\n",
-    "print(radii)\n",
-    "print(\"---\")\n",
-    "print(rotation)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def randrange(n, vmin, vmax):\n",
-    "    \"\"\"\n",
-    "    Helper function to make an array of random numbers having shape (n, )\n",
-    "    with each number distributed Uniform(vmin, vmax).\n",
-    "    \"\"\"\n",
-    "    return (vmax - vmin)*np.random.rand(n) + vmin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax=plt.axes(projection='3d')\n",
-    "ax.set_xlim(-20,150)\n",
-    "ax.set_ylim(-20,150)\n",
-    "ax.set_zlim(-30,100)\n",
-    "ax.scatter3D(X[:,0],X[:,1],X[:,2],s=10,marker='*',color='g')\n",
-    "ax.set_xlabel('first feature')\n",
-    "ax.set_ylabel('second feature')\n",
-    "ax.set_zlabel('third feature')\n",
-    "ys = randrange(40, 0, 100)\n",
-    "zs = randrange(40, 0,100)\n",
-    "xs = randrange(40, 0, 100)\n",
-    "ax.scatter(xs, ys, zs, marker='^')\n",
-    "ET = EllipsoidTool()\n",
-    "(center, radii, rotation) = ET.getMinVolEllipse(X, .01)\n",
-    "ET.plotEllipsoid(center, radii, rotation, ax=ax, plotAxes=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "5f5277ade0e427ba53f4f59731df06a81409d3d5d18aa06b18e04ee34f04aaa5"
+   "hash": "497338f01161d141240caa60efca5087225791fadc9b7c964beb65d863e046f0"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
