--- a/EPASAD.ipynb
+++ b/EPASAD.ipynb
@@ -510,7 +510,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (windows store)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -524,12 +524,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "497338f01161d141240caa60efca5087225791fadc9b7c964beb65d863e046f0"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
