--- a/manipulation9.ipynb
+++ b/manipulation9.ipynb
@@ -80,16 +80,6 @@
     "    var1=np.square(cluster-center)\n",
     "    var2=np.matmul(weight,var1.T)\n",
     "    max_radius=np.amax(var2)\n",
-    "    if math.isnan(max_radius):\n",
-    "        print('Rank: ',r)\n",
-    "        print('Cluster Shape: ',cluster.shape)\n",
-    "        print('CLuster: ',cluster)\n",
-    "        print('Weight Shape: ', weight.shape)\n",
-    "        print('Weight: ', weight)\n",
-    "        print('Center Shape: ', center.shape)\n",
-    "        print('Center: ', center)\n",
-    "        print('Var1: ', var1)\n",
-    "        print('Var2: ', var2)\n",
     "    radiis.append(max_radius)\n",
     "radiis\n",
     "\n"
@@ -100,7 +90,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if math.isnan(max_radius):\n",
+    "        print('Rank: ',r)\n",
+    "        print('Cluster Shape: ',cluster.shape)\n",
+    "        print('CLuster: ',cluster)\n",
+    "        print('Weight Shape: ', weight.shape)\n",
+    "        print('Weight: ', weight)\n",
+    "        print('Center Shape: ', center.shape)\n",
+    "        print('Center: ', center)\n",
+    "        print('Var1: ', var1)\n",
+    "        print('Var2: ', var2)"
+   ]
   }
  ],
  "metadata": {
