--- a/manipulation9.ipynb
+++ b/manipulation9.ipynb
@@ -52,11 +52,11 @@
     {
      "data": {
       "text/plain": [
-       "[0.9999934606855743,\n",
-       " 1.000006924729706,\n",
+       "[1.000009624398698,\n",
+       " 1.0000037786508869,\n",
+       " 0.9999983630446033,\n",
        " 1.0000096243986938,\n",
-       " 0.9999911028074571,\n",
-       " 1.000009624398698]"
+       " 1.000006924729706]"
       ]
      },
      "execution_count": 4,
@@ -87,7 +87,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0008168366684211"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = df.iloc[:,1].values\n",
+    "X = hankel.fit(X,30,0.5)\n",
+    "r = rank.fit(X)\n",
+    "U,Sigma,VT = np.linalg.svd(X)\n",
+    "V = VT.T\n",
+    "X = np.matmul(X,V[:,:r])\n",
+    "weight,center = meepc.fit(X)\n",
+    "var1=np.square(X-center)\n",
+    "var2=np.matmul(weight,var1.T)\n",
+    "max_radius = math.sqrt(np.amax(var2))\n",
+    "max_radius\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = pd.read_csv('data/testdata.csv')\n",
+    "df_test = df_test.iloc[:, sensors]\n",
+    "X_test = df_test[:1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0043296678240774"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test = hankel.fit(X_test,30,0.5)\n",
+    "r = rank.fit(X_test)\n",
+    "if r==1:\n",
+    "    r = 2\n",
+    "U,Sigma,VT = np.linalg.svd(X_test)\n",
+    "V = VT.T\n",
+    "X_test = np.matmul(X_test,V[:,:r])\n",
+    "weight,center = meepc.fit(X_test)\n",
+    "var1=np.square(X_test-center)\n",
+    "var2=np.matmul(weight,var1.T)\n",
+    "max_radius = math.sqrt(np.amax(var2))\n",
+    "max_radius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
