--- a/manipulation9.ipynb
+++ b/manipulation9.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/training_data.csv')\n",
+    "df = pd.read_csv('~/data/training_data.csv')\n",
     "sensors = [3,9,25,43]\n",
     "df = df.iloc[:, sensors]"
    ]
@@ -52,11 +52,11 @@
     {
      "data": {
       "text/plain": [
-       "[1.000009624398698,\n",
-       " 1.0000037786508869,\n",
-       " 0.9999983630446033,\n",
-       " 1.0000096243986938,\n",
-       " 1.000006924729706]"
+       "[1.0000096243995542,\n",
+       " 1.0000006903460061,\n",
+       " 0.999997173938985,\n",
+       " 1.000003910799279,\n",
+       " 1.1097640481389033]"
       ]
      },
      "execution_count": 4,
@@ -70,6 +70,10 @@
     "kmeans,optimal_k = cluster.fit(X)\n",
     "print(optimal_k)\n",
     "radiis = []\n",
+    "radiis = []\n",
+    "weights=[]\n",
+    "centers=[]\n",
+    "topR=[]\n",
     "for i in range(optimal_k):\n",
     "    cluster = X[np.where(kmeans.labels_ == i)[0]]\n",
     "    r = rank.fit(X)\n",
@@ -93,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0008168366684211"
+       "1.000816836668414"
       ]
      },
      "execution_count": 5,
@@ -117,40 +121,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv('data/testdata.csv')\n",
+    "df_test = pd.read_csv('~/data/testdata.csv')\n",
     "df_test = df_test.iloc[:, sensors]\n",
     "X_test = df_test[:1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0043296678240774"
+       "3095.551245812144"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_test = hankel.fit(X_test,30,0.5)\n",
-    "r = rank.fit(X_test)\n",
-    "if r==1:\n",
-    "    r = 2\n",
+    "# r = rank.fit(X_test)\n",
+    "# if r==1:\n",
+    "#     r = 2\n",
     "U,Sigma,VT = np.linalg.svd(X_test)\n",
     "V = VT.T\n",
     "X_test = np.matmul(X_test,V[:,:r])\n",
-    "weight,center = meepc.fit(X_test)\n",
+    "# weight,center = meepc.fit(X_test)\n",
     "var1=np.square(X_test-center)\n",
     "var2=np.matmul(weight,var1.T)\n",
     "max_radius = math.sqrt(np.amax(var2))\n",
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -192,12 +196,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13 (main, Aug 25 2022, 23:26:10) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "53b584fcbb4de26fd06ec6c2cdf5e79eeceea3a87d14166bd7f17bce6a8842a5"
    }
   }
  },
