--- a/manipulation9.ipynb
+++ b/manipulation9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/training_data.csv')\n",
+    "df = pd.read_csv('~/data/training_data.csv')\n",
     "sensors = [3,9,25,43]\n",
     "df = df.iloc[:, sensors]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +52,14 @@
     {
      "data": {
       "text/plain": [
-       "[1.000009624398698,\n",
-       " 1.0000037786508869,\n",
-       " 0.9999983630446033,\n",
+       "[0.9999934606855743,\n",
+       " 1.000006924729706,\n",
        " 1.0000096243986938,\n",
-       " 1.000006924729706]"
+       " 0.9999911028074571,\n",
+       " 1.000009624398698]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,16 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1.0008168366684211"
+       "1.000003212252243"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,10 +111,13 @@
    "source": [
     "X = df.iloc[:,1].values\n",
     "X = hankel.fit(X,30,0.5)\n",
+    "# print(X.shape)\n",
     "r = rank.fit(X)\n",
+    "print(r)\n",
     "U,Sigma,VT = np.linalg.svd(X)\n",
+    "# print(U.shape)\n",
     "V = VT.T\n",
-    "X = np.matmul(X,V[:,:r])\n",
+    "X = np.matmul(X.T,U[:,:r])\n",
     "weight,center = meepc.fit(X)\n",
     "var1=np.square(X-center)\n",
     "var2=np.matmul(weight,var1.T)\n",
@@ -117,40 +127,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv('data/testdata.csv')\n",
+    "df_test = pd.read_csv('~/data/testdata.csv')\n",
     "df_test = df_test.iloc[:, sensors]\n",
-    "X_test = df_test[:1].values"
+    "Xtest = df_test.iloc[:,1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00222796] [-21.20421687]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1.0043296678240774"
+       "1.001713313658679"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test = hankel.fit(X_test,30,0.5)\n",
-    "r = rank.fit(X_test)\n",
-    "if r==1:\n",
-    "    r = 2\n",
-    "U,Sigma,VT = np.linalg.svd(X_test)\n",
-    "V = VT.T\n",
-    "X_test = np.matmul(X_test,V[:,:r])\n",
+    "X_test = hankel.fit(Xtest,30,0.5)\n",
+    "X_test = X_test[:,19]\n",
+    "X_test = np.matmul(U[:,:r].T,X_test.reshape(-1,1))\n",
+    "# X_test = X_test.T\n",
+    "# print(X_test.shape)\n",
     "weight,center = meepc.fit(X_test)\n",
+    "print(weight,center)\n",
     "var1=np.square(X_test-center)\n",
     "var2=np.matmul(weight,var1.T)\n",
     "max_radius = math.sqrt(np.amax(var2))\n",
@@ -159,21 +175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if math.isnan(max_radius):\n",
-    "        print('Rank: ',r)\n",
-    "        print('Cluster Shape: ',cluster.shape)\n",
-    "        print('CLuster: ',cluster)\n",
-    "        print('Weight Shape: ', weight.shape)\n",
-    "        print('Weight: ', weight)\n",
-    "        print('Center Shape: ', center.shape)\n",
-    "        print('Center: ', center)\n",
-    "        print('Var1: ', var1)\n",
-    "        print('Var2: ', var2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -192,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
