--- a/manipulation9.ipynb
+++ b/manipulation9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,57 +16,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hankel = Hankel.Hankel()\n",
-    "rank = Rank.Rank()\n",
-    "cluster = Cluster.Cluster()\n",
+    "hankel = Hankel()\n",
+    "rank = Rank()\n",
+    "cluster = Cluster()\n",
     "meepc = Meepc.MEEPC()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('~/data/training_data.csv')\n",
+    "df_normal=df[df['Attack LABLE (1:No Attack, -1:Attack)']==1]\n",
+    "df_attack=df[df['Attack LABLE (1:No Attack, -1:Attack)']==-1]\n",
     "sensors = [3,9,25,43]\n",
-    "df = df.iloc[:, sensors]"
+    "df_normal = df_normal.iloc[:, sensors]\n",
+    "df_attack=df_attack.iloc[:,sensors]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "4\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.9999934606855743,\n",
-       " 1.000006924729706,\n",
-       " 1.0000096243986938,\n",
-       " 0.9999911028074571,\n",
-       " 1.000009624398698]"
+       "[1.0004404448941016, 1.0000054705202335, 1.0328305771318984, 1.000978109343972]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = df.iloc[:,1].values\n",
+    "X = df_normal.iloc[:,2].values\n",
     "X = hankel.fit(X,30,0.5)\n",
+    "X = X.T\n",
     "kmeans,optimal_k = cluster.fit(X)\n",
     "print(optimal_k)\n",
     "radiis = []\n",
@@ -75,13 +75,13 @@
     "centers=[]\n",
     "topR=[]\n",
     "for i in range(optimal_k):\n",
-    "    cluster = X[np.where(kmeans.labels_ == i)[0]]\n",
+    "    cluster_points = X[np.where(kmeans.labels_ == i)[0]]\n",
     "    r = rank.fit(X)\n",
-    "    U,Sigma,VT = np.linalg.svd(cluster)\n",
+    "    U,Sigma,VT = np.linalg.svd(cluster_points)\n",
     "    V = VT.T\n",
-    "    cluster = np.matmul(cluster,V[:,:r])\n",
-    "    weight,center = meepc.fit(cluster)\n",
-    "    var1=np.square(cluster-center)\n",
+    "    cluster_points = np.matmul(cluster_points,V[:,:r])\n",
+    "    weight,center = meepc.fit(cluster_points)\n",
+    "    var1=np.square(cluster_points-center)\n",
     "    var2=np.matmul(weight,var1.T)\n",
     "    max_radius=np.amax(var2)\n",
     "    radiis.append(max_radius)\n",
@@ -187,7 +187,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -201,12 +201,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "53b584fcbb4de26fd06ec6c2cdf5e79eeceea3a87d14166bd7f17bce6a8842a5"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
