--- a/wadi_pasad.ipynb
+++ b/wadi_pasad.ipynb
@@ -1442,8 +1442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std_dev = df_temp.std(numeric_only=True)\n",
-    "\n"
+    "std_dev = df_temp.std(numeric_only=True)"
    ]
   },
   {
